[workspace]

resolver = "2"

members = ["integration-tests", "processor"]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/nightly-labs/aptos-indexer-processors-v2"
# This needs to match neony's version to run the processors in the CLI. 
rust-version = "1.78"

[workspace.dependencies]

ahash = { version = "0.8.7", features = ["serde"] }
allocative = "0.3.3"
allocative_derive = "0.3.3"
anyhow = "1.0.98"
# Do NOT enable the postgres_full feature here, it is conditionally enabled in a feature
# block in the Cargo.toml file for the processor crate.
# https://github.com/nightly-labs/aptos-indexer-processors/pull/325
# Do NOT enable the testing_framework feature here, it is conditionally enabled as a dev dependency
# in the integration-tests/Cargo.toml file.
aptos-indexer-processor-sdk = { git = "https://github.com/nightly-labs/aptos-indexer-processor-sdk.git", rev = "078e46195a47a1ba6de92a501cc3a430fee2870a", features = [
    "postgres_partial",
] }
aptos-indexer-test-transactions = { git = "https://github.com/nightly-labs/neony.git", rev = "0e225c7b3d7272150cc31a63ecce2d52315017e0" }
assert-json-diff = "2.0.2"
async-trait = "0.1.53"
backtrace = "0.3.58"
base64 = "0.13.0"
bb8 = "0.8.1"
bcs = { git = "https://github.com/nightly-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bigdecimal = { version = "0.4.0", features = ["serde"] }
bitflags = "2.5.0"
canonical_json = "0.5.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
const_format = "0.2.33"
# Do NOT enable the postgres feature here, it is conditionally enabled in a feature
# block in the Cargo.toml file for the processor crate.
# https://github.com/nightly-labs/aptos-indexer-processors/pull/325
diesel = { version = "~2.3", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
diesel-async = { version = "0.7.4", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_async_migrations = { git = "https://github.com/weiznich/diesel_async.git", rev = "e3beac66cd41ab53d78a10328bb72f272103e5d1" }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dirs = "5.0.1"
downcast-rs = "1.2.1"
enum_dispatch = "0.3.12"
field_count = "0.1.1"
futures = "0.3.30"
futures-core = "0.3.25"
futures-util = "0.3.21"
gcloud-sdk = { version = "0.20.4", features = [
    "google-cloud-bigquery-storage-v1",
] }
google-cloud-googleapis = "0.10.0"
google-cloud-pubsub = "0.18.0"
google-cloud-storage = "0.13.0"
hex = "0.4.3"
hyper = { version = "0.14.18", features = ["full"] }
itertools = "0.12.1"
json-structural-diff = "0.1.0"
lazy_static = "1.4.0"
log = "0.4.22"
mockall = "0.12.1"

# Postgres SSL support
native-tls = "0.2.11"
num = "0.4.0"
num_cpus = "1.16.0"
once_cell = "1.10.0"

# Parquet support
parquet = { version = "52.0.0", default-features = false, features = [
    "async",
    "lz4",
] }
parquet_derive = { version = "52.0.0" }
pbjson = "0.5.1"
postgres-native-tls = "0.5.0"
processor = { path = "processor" }
prometheus = { version = "0.13.3", default-features = false }
prost = { version = "0.13.4", features = ["no-recursion-limit"] }
prost-types = "0.13.4"
# Keep it compatible with the neony version.
rayon = "1.5.2"
regex = "1.5.5"
reqwest = { version = "0.11.20", features = [
    "blocking",
    "cookies",
    "json",
    "stream",
] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_canonical_json = "1.0.0"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.3.0"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
toml = "0.7.4"
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
    "zstd",
] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
unescape = "0.1.0"
url = { version = "2.4.0", features = ["serde"] }
warp = { version = "0.3.5", features = ["tls"] }
